ipc/ipdl/test/ipdl/error/redeclMessage.ipdl
protocol redeclMessage {

    // can't declare two messages with the same name

child:
    Msg();
    Msg();

};
